added contact section

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-icons": "^4.11.0",
     "react-type-animation": "^3.2.0",
     "react-vertical-timeline-component": "^3.6.0",
+    "resend": "^2.0.0",
     "tailwind-merge": "^2.0.0"
   },
   "devDependencies": {
